# niffler

./: Cargo.toml  LICENSE  README.md
src/: app.rs  board.rs  card.rs  config.rs  editor.rs  filesystem.rs  lib.rs  main.rs  mode.rs  tui.rs
