[package]
name = "niffler-tui"
version = "0.1.4"
edition = "2024"
description = "A Trello-like Kanban board for the terminal"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Newt6611/niffler"
keywords = ["tui", "kanban", "task", "terminal", "productivity"]
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "demo.png",
    "logo.png",
]

[lib]
name = "niffler"
path = "src/lib.rs"

[[bin]]
name = "niffler"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
